# skosprovider

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .pyup.yml  .readthedocs.yaml  .travis.yml  CITATION.cff  HISTORY.rst  LICENSE  README.rst  nose_cover.cfg  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: skosprovider.yaml
docs/: Makefile  api.rst  conf.py  development.rst  glossary.rst  index.rst  intro.rst  make.bat  usage.rst
examples/: api.py  dump_jsonld.py  resources.py
scripts/: compile_requirements.sh
skosprovider/: exceptions.py  jsonld.py  providers.py  registry.py  resources.py  skos.py  uri.py  utils.py
skosprovider/tests/: test_providers.py  test_registry.py  test_skos.py  test_uri.py  test_utils.py
tests/: test_exceptions.py  test_jsonld.py  test_providers.py  test_registry.py  test_skos.py  test_uri.py  test_utils.py
tests/data/: menu.csv
