[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
version = "1.2.0"
name = "skosprovider"
dynamic = ["readme"]
authors = [
    { name = "Flanders Heritage Agency", email = "ict@onroerenderfgoed.be" },
]
#license = "GPL-3.0-or-later"
description = "Abstraction layer for SKOS vocabularies."
requires-python = ">=3.10,<3.13"
keywords = ["rdf", "skos", "skosprovider", "vocabularies", "thesauri"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Framework :: Pyramid",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "language-tags==1.1.0",
    "rfc3987==1.3.8",
    "pyld==2.0.3",
    "html5lib==1.1",
]

[project.urls]
History = "https://github.com/OnroerendErfgoed/skosprovider/blob/master/HISTORY.rst"
Tracker = "https://github.com/OnroerendErfgoed/skosprovider/issues"
Source = "https://github.com/OnroerendErfgoed/skosprovider"
Documentation = "https://skosprovider.readthedocs.io/en/latest/"

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-cov==6.2.1",
    "coveralls==4.0.1"
]

##
# Build tool specific
##
[tool.hatch.build.targets.wheel]
# In the wheel we want to have skosprovider in the root as python module.
only-include = [
    "/skosprovider",
]

[tool.hatch.metadata]
# This allows us to use github links as dependencies
allow-direct-references = true

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/x-rst"
fragments = [
    { path = "README.rst" },
    { path = "HISTORY.rst" },
]
